--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Ernesto</h1>
         <nav>
             <ul>
-                <li><a href="#" data-page="subdomains/about.html">About Me</a></li>
-                <li><a href="#" data-page="subdomains/projects.html">Projects</a></li>
-                <li><a href="#" data-page="subdomains/socials.html">Social Links</a></li>
-                <li><a href="#" data-page="subdomains/blog.html">Blog</a></li>
-                <li><a href="#" data-page="subdomains/contact.html">Contact</a></li>
+                <li><a href="subdomains/about.html">About Me</a></li>
+                <li><a href="subdomains/projects.html">Projects</a></li>
+                <li><a href="subdomains/socials.html">Social Links</a></li>
+                <li><a href="subdomains/blog.html">Blog</a></li>
+                <li><a href="subdomains/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
