--- a/projects.html
+++ b/projects.html
@@ -25,24 +25,20 @@
     </center>
 </div>
 <div>
-    <center>
-        <table>
-            <tr>
-                <td style="width:5%">&nbsp;</td>
-                <td style="font:arial;background-color:Gray">
-                    <p style="color:White;font-size:large">
-• Skilled in <b>Phyton</b> programming languages.<br />
-• Skilled in <b>Java</b> programming languages..<br />
-• Skilled in 3D design (Solidworks, Onshape) and robot building.<br />
-• Participated in multiple Vex, Vex IQ and FRC competitions for 4 years.<br />
-• Self-starting and team-oriented with the ability to learn and apply new technologies.
-                    </p>
-                </td>
-                <td align="center"><img src="images/software-development.jpg" alt="software development"/></td>
-                <td style="width:5%">&nbsp;</td>
-            </tr>
-        </table>
-    </center>
+
+        <center><h2>Projects</h2></center>
+        <p style="font-size:large">
+            &nbsp;&nbsp; •  President fo the school Coding Club "RamsThatCode"<br>
+            &nbsp;&nbsp; •  Ramtech Club – FRC (First Robotics Competition) – Impact<br>
+            &nbsp;&nbsp; •  Ramtech Club – Ten80 Racing - Enterprise<br>
+            &nbsp;&nbsp; •  SparkTech Tutoring (teacher - coding and 3D design classes to Kenya’s students)<br>
+            &nbsp;&nbsp; •  Riders Robotics<br>
+            &nbsp;&nbsp; •  National Honor Society<br>
+            &nbsp;&nbsp; •  National Society of High School Scholars<br>
+            </p>
+
+
+
 </div>
 <div>
     <footer>
