--- a/about.html
+++ b/about.html
@@ -26,22 +26,13 @@
 </div>
 <div>
     <center>
-        <table>
-            <tr>
-                <td style="width:5%">&nbsp;</td>
-                <td style="font:arial;background-color:Gray">
-                    <p style="color:White;font-size:large">
-• Skilled in <b>Phyton</b> programming languages.<br />
-• Skilled in <b>Java</b> programming languages..<br />
-• Skilled in 3D design (Solidworks, Onshape) and robot building.<br />
-• Participated in multiple Vex, Vex IQ and FRC competitions for 4 years.<br />
-• Self-starting and team-oriented with the ability to learn and apply new technologies.
-                    </p>
-                </td>
-                <td align="center"><img src="images/software-development.jpg" alt="software development"/></td>
-                <td style="width:5%">&nbsp;</td>
-            </tr>
-        </table>
+        <h2>About Me</h2>
+        <p style="font-size:large">
+            My long-range goals are to make as much of a positive impact on the human race as possible
+by advancing science. I am very insterested in Computer Science and Mathematics.
+            </p>
+
+
     </center>
 </div>
 <div>
