--- a/index.html
+++ b/index.html
@@ -1,54 +1,33 @@
-﻿<!DOCTYPE html">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ernesto's portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-<div>
-    <center>
-        <header>
-            <h1>Ernesto</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="socials.html">Social Links</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-    </center>
-</div>
-<div>
-    <center>
-        <table>
-            <tr>
-                <td style="width:5%">&nbsp;</td>
-                <td style="font:arial;background-color:Gray">
-                    <p style="color:White;font-size:large">
-• Skilled in <b>Phyton</b> programming languages.<br />
-• Skilled in <b>Java</b> programming languages..<br />
-• Skilled in 3D design (Solidworks, Onshape) and robot building.<br />
-• Participated in multiple Vex, Vex IQ and FRC competitions for 4 years.<br />
-• Self-starting and team-oriented with the ability to learn and apply new technologies.
-                    </p>
-                </td>
-                <td align="center"><img src="images/software-development.jpg" alt="software development"/></td>
-                <td style="width:5%">&nbsp;</td>
-            </tr>
-        </table>
-    </center>
-</div>
-<div>
+    <header>
+        <h1>Ernesto</h1>
+        <nav>
+            <ul>
+                <li><a href="#" data-page="subdomains/about.html">About Me</a></li>
+                <li><a href="#" data-page="subdomains/projects.html">Projects</a></li>
+                <li><a href="#" data-page="subdomains/math.html">Math</a></li>
+                <li><a href="#" data-page="subdomains/robotics.html">Robotics</a></li>
+                <li><a href="#" data-page="subdomains/awards.html">Awards</a></li>
+                <li><a href="#" data-page="subdomains/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="content">
+        <!-- Content will be loaded here -->
+    </main>
+
     <footer>
         <p>© 2025 My Personal Portfolio</p>
     </footer>
-</div>
-
 </body>
 </html>
