--- a/subdomains/about.html
+++ b/subdomains/about.html
@@ -8,31 +8,35 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>    
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
-    <h1> about me1 </h1>
+    <h2>About Me</h2>
+    <p style="font-size:large">
+        My long-term goals are to leave a real mark on the world through Computer Science and Mathematics. I would love to be a researcher
+        and dedicate myself to advancing knowledge.
+        </p>
+        <div class="imageflex">
+            <img src="Pictures/SyipKickoffPresentation.jpg" style="width:270px;height:400px;">
+            <p class="imageflexcontent">
+                •  Skilled in Phyton programming languages.<br>
+                •  Skilled in Java programming languages.<br>
+                •  Skilled in 3D design (Solidworks, Onshape) and robot buildin.<br>
+                •  Participated in multiple Vex, Vex IQ and FRC competitions for 4 years.<br>
+                •  Self-starting and team-oriented with the ability to learn and apply new technologies.<br><br>
+                <span class="remark">Math interests</span><br>
+                •  DifferentialEquations<br>
+                •  Fourier analysis<br>
+                •  Eigenvectors and Eigenfunctions<br>
+                •  Gauss Error Function<br>
+                •  Weierstrass function<br>
+                •  Multivariable Calculus<br><br>
+                <span class="remark">Computer Science interests</span><br>
+                •  Neural Networks<br>
+                •  Machine Learning<br>
+                •  Computational Biomechanics<br><br>
 
+                <span class="remark">Unweighted GPA:</span><b> 4</b><br>
+                <span class="remark"> &nbsp;&nbsp;Weighted GPA:</span><b> 5.06</b><br>
 
-
-
+            </p>
+        </div>
 </body>
+</html>
