--- a/subdomains/contact.html
+++ b/subdomains/contact.html
@@ -8,9 +8,10 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1> about me5 </h1>
-
-
-
+    <h2>Contact</h2>
+    <p style="font-size:large">
+        ernestokorin@gmail.com <br>
+        786-451-8259
+        </p>
 
 </body>
