--- a/subdomains/projects.html
+++ b/subdomains/projects.html
@@ -8,9 +8,21 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1> about me2 </h1>
+    <p style="font-size:large">
+        &nbsp;&nbsp; •  President of the school Coding Club "RamsThatCode"<br>
+        &nbsp;&nbsp; •  Ramtech Club – FRC (First Robotics Competition) – Impact leader<br>
+        &nbsp;&nbsp; •  Ramtech Club – Ten80 Racing - Enterprise<br>
+        &nbsp;&nbsp; •  SparkTech Tutoring (teacher - coding and 3D design classes to Kenya’s students)<br>
+        &nbsp;&nbsp; •  Riders Robotics club<br>
+        &nbsp;&nbsp; •  Mu Alpha Theta club<br>
+        &nbsp;&nbsp; •  National Honor Society<br>
+        &nbsp;&nbsp; •  National Society of High School Scholars<br>
+        </p>
+        <img src="Pictures/Robotics.jpeg" style="width:480px;height:360px;">
+        <img src="Pictures/Sparktech.jpeg" style="width:480px;height:360px;">
 
 
 
 
 </body>
+</html>
