--- a/subdomains/socials.html
+++ b/subdomains/socials.html
@@ -8,9 +8,10 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1> about me3 </h1>
-
-
+    <h2>Social Links</h2>
+    <p style="font-size:large">
+        
+        </p>
 
 
 </body>
