--- a/subdomains/blog.html
+++ b/subdomains/blog.html
@@ -8,7 +8,11 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1> about me4 </h1>
+    <h2>Blog</h2>
+    <p style="font-size:large">
+        Unfinished
+    </p>
+
 
 
 
