--- a/subdomains/robotics.html
+++ b/subdomains/robotics.html
@@ -18,7 +18,7 @@
                 <div class="imageflex">
                     <img src="Pictures/first.jpeg" style="width:271px;height:398px;">
                     <div class="imageflexcontent">
-                        <p>I'm a member of Ramtech Club  FRC (First Robotics Competition) since 2022.<br>
+                        <p>I'm a member of Ramtech Club  FRC (<a href="https://www.firstinspires.org/robotics/frc">First Robotics Competition</a>) since 2022.<br>
                             I am currently the leader of the Impact team and a core programmer, and I've competed at FRC Worlds twice (with a 2023 Einsteins appearance), 
                             I am currently the leader of the Impact team and a core programmer, and I've competed at FRC Worlds twice (with a 2023 Einsteins appearance), 
                             5 FRC offseason competitions (2 which we co-hosted), and 5 FRC regionals(Orlando 2024 regional champions as alliance captains & Pittsburgh 2023 Impact award recipients),
@@ -52,8 +52,8 @@
 
             <details>
                 <summary>SparkTech Tutoring</summary>
-                Teacher - coding and 3D design classes to Kenya’s students.<br>
-                I've been teaching primarily CAD lessons along with some coding lessons to students from the city of Kisumu in Kenya through google meets on Saturdays. 
+                I have been teaching "3D design classes" at <a href="https://www.sparktechtutoring.com/3ddesign">SparkTech Tutoring</a> to Kenya’s students.<br>
+                I have been teaching primarily CAD lessons along with some coding lessons to students from the city of Kisumu in Kenya through google meets on Saturdays. 
                 This involves planning lessons and projects, then leading the students step by step through the process.
             </details>
             <br>
